--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.2.9",
-    "mapbox-gl": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^4.0.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.1",
+    "react-simple-star-rating": "^4.0.5",
     "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
